--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,14 @@ ul {
     width: 100%;
 }
 
+.logo h1 {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+.logo h1 span {
+    color: #ff6b00;
+} 
 /* Cabeçalho */
 .header {
     position: fixed;
